fixed layout bugs

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -133,7 +133,9 @@ p i {
     padding: 7px;
 }
 
-
+#about-me-three p {
+    margin-left: 2em;
+}
 #about-me-three a {
     color: #000000;
     font-size: 1.1em;
@@ -164,7 +166,7 @@ p i {
     padding-left: 10px;
     padding-right: 10px;
     font-weight: 500;
-    margin-left: 4em;
+    margin-left: 6em;
     border-radius: 30px;
     border: 2px solid #202020;
 }
@@ -177,6 +179,8 @@ p i {
 
 #about-me-one {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-self: center;
     line-height: 1em;
     background-color: #ffffff;
@@ -198,6 +202,16 @@ p i {
     font-weight: 700;
     text-align: end;
 }
+
+#about-me-two p {
+    text-align: justify;
+}
+
+/* #about-me-three {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
 
 #section-two {
     background-color: #ffcc00e0;
